# codefuzzer

./: CMakeLists.txt  README.md  build.sh  version.md
codefuzzer/: codefuzzer.h
codefuzzer/core/: Cconfig.c  Ccorpus.c  CdoHook.c  CdoTracepc.c  CgetValue.c  Cinternal.c  Clib.c  Cmemory.c  CmutatorRevise.c  Core.c  Core.h  Creport.c  Cschedule.c  Csupport.c  Ctimeout.c
codefuzzer/mutator/: Dict.c  MBlobDict.c  MBlobTable.c  MNoMutator.c  MNumberEdge.c  MNumberGauss.c  MNumberLittleRandom.c  MNumberMagic.c  MNumberRandom.c  MNumberRange.c  MNumberSwap.c  MNumberTable.c  MSelf.c  MStringDict.c  MStringHook.c  MStringTable.c  MdataBitFill.c  MdataBitMulRandom.c  MdataBitOneRandom.c  MdataBitZero.c  MdataByteMulInsert.c  MdataByteMulRandom.c  MdataByteOneInsert.c  MdataByteOneRandom.c  MdataCorpusSwap.c  MdataLengthExtendMagicMem.c  MdataLengthExtendSpecific.c  MdataLengthRepeatSelfInsert.c  MdataLengthRepeatSelfTail.c  MdataMemoryDictBlob.c  MdataMemoryDictString.c  MdataMemoryHook.c  MdataMemoryNumberString.c  MdataMemoryOtherCorpus.c  MdataMemoryStaticString.c  MdataNumberChange.c  MdataNumberDict.c  MdataNumberHook.c  MdataNumberSelf.c  MdataNumberSize.c  (+5 more)
codefuzzer/plus/: PIO.c  Pcmd.c  PcorpusBin.c  PcorpusTxt.c  Pcrash.c  Pkcov.c  Platform.c  Pleak.c  PllvmHook.c  PllvmTracePC.c
doc/: 如何编译被测代码.md  工具如何移植.md  工具如何编译.md  简单使用举例1.md  简单使用举例2.md  简单使用举例3.md
doc/其他/: bug复现.md  报告生成.md
doc/场景适配/: gtest下使用.md  利用hook测试.md  测试驱动.md  运行libfuzzer用例.md  适配windows.md  适配安卓.md
doc/工具原理/: 内存hook.md  变异算法.md  数据类型.md  样本生成、调度、淘汰.md  速度调优.md
doc/工具如何扩展/: 动态扩展.md  (+4 more)
(+42 files in other folders)
